<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/custom" >

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg"
            android:backgroundTint="@color/custombuttoncolour"
            android:text="@string/button_refresh"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:clickable="true"
            android:onClick="onClick"/>

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:textSize="29dp"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_temperature"
            android:drawableRight="@drawable/ic_celcius" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_thunderstorm_large"
            android:scaleX="@string/scale07"
            android:scaleY="@string/scale07" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_orientation="horizontal"
            android:layout_marginTop="@string/custommargintop"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_wind"
                android:scaleX="@string/scale06"
                android:scaleY="@string/scale06"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_humidity"
                android:scaleX="@string/scale06"
                android:scaleY="@string/scale06"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/cloudiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_cloudiness"
                android:scaleX="@string/scale06"
                android:scaleY="@string/scale06"
                android:textSize="20dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/credit_desc" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>